--- a/Latex/template.tex
+++ b/Latex/template.tex
@@ -45,7 +45,7 @@
 \author[1]{Robert Fischer}
 \author[2]{Somebody Else}
 
-\affil[1]{Electrochemistry Laboratory, Paul Scherrer Institut, Forschungsstrasse 111, 5242 Villigen PSI, Switzerland}
+\affil[1]{ESRF - The European Synchrotron, Grenoble, France}
 \affil[2]{lab, institute, street, city, country} 
 
 \date{\today}
